--- a/series.conf
+++ b/series.conf
@@ -12655,6 +12655,7 @@
 	patches.suse/net-don-t-allow-user-space-to-lift-the-device-limits.patch
 	patches.suse/sfc-Move-Siena-specific-files.patch
 	patches.suse/sfc-Copy-shared-files-needed-for-Siena-part-1.patch
+	patches.suse/sfc-Copy-shared-files-needed-for-Siena-part-2.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
