net:dev: Change napi_gro_complete return type to void (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5299,6 +5299,7 @@
 	patches.suse/ionic-add-polling-to-adminq-wait.patch
 	patches.suse/ionic-have-ionic_qcq_disable-decide-on-sending-to-ha.patch
 	patches.suse/ionic-add-lif-param-to-ionic_qcq_disable.patch
+	patches.suse/net-dev-Change-napi_gro_complete-return-type-to-void.patch
 	patches.suse/msft-hv-2445-net-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-use-eth_hw_addr_set-instead-of-ether_addr_c.patch
