--- a/series.conf
+++ b/series.conf
@@ -13952,6 +13952,7 @@
 	patches.suse/sfc-Fix-typo-in-comment.patch
 	patches.suse/sfc-siena-Fix-typo-in-comment.patch
 	patches.suse/vmxnet3-disable-overlay-offloads-if-UPT-device-does-.patch
+	patches.suse/cxgb4vf-remove-unexpected-word-the.patch
 	patches.suse/bnxt-Fix-typo-in-comments.patch
 	patches.suse/usbnet-Fix-linkwatch-use-after-free-on-disconnect.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
