net: dev_addr_list: handle first address in __hw_addr_add_ex (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -3866,6 +3866,7 @@
 	patches.suse/net-phy-bcm7xxx-Fixed-indirect-MMD-operations.patch
 	patches.suse/net-introduce-and-use-lock_sock_fast_nested.patch
 	patches.suse/net-sched-flower-protect-fl_walk-with-rcu.patch
+	patches.suse/net-dev_addr_list-handle-first-address-in-__hw_addr_.patch
 	patches.suse/net-stmmac-fix-EEE-init-issue-when-paired-with-EEE-c.patch
 	patches.suse/af_unix-fix-races-in-sk_peer_pid-and-sk_peer_cred-ac.patch
 	patches.suse/iommu-dart-remove-iommu_flush_ops
