--- a/series.conf
+++ b/series.conf
@@ -14632,6 +14632,7 @@
 	patches.suse/mmc-pxamci-Fix-another-error-handling-path-in-pxamci.patch
 	patches.suse/mmc-meson-gx-Fix-an-error-handling-path-in-meson_mmc.patch
 	patches.suse/ata-libata-eh-Add-missing-command-name.patch
+	patches.suse/RDMA-cxgb4-fix-accept-failure-due-to-increased-cpl_t.patch
 	patches.suse/s390-hypfs-avoid-error-message-under-KVM.patch
 	patches.suse/kbuild-fix-the-modules-order-between-drivers-and-lib.patch
 	patches.suse/i2c-imx-Make-sure-to-unregister-adapter-on-remove.patch
