--- a/series.conf
+++ b/series.conf
@@ -11074,6 +11074,7 @@
 	patches.suse/ixgbe-add-the-ability-for-the-PF-to-disable-VF-link-.patch
 	patches.suse/ixgbe-add-improvement-for-MDD-response-functionality.patch
 	patches.suse/ixgbevf-add-disable-link-state.patch
+	patches.suse/e1000e-Print-PHY-register-address-when-MDI-read-writ.patch
 	patches.suse/bnxt-revert-hastily-merged-uAPI-aberrations.patch
 	patches.suse/can-isotp-set-default-value-for-N_As-to-50-micro-sec.patch
 	patches.suse/vxcan-enable-local-echo-for-sent-CAN-frames.patch
