--- a/series.conf
+++ b/series.conf
@@ -12947,6 +12947,7 @@
 	patches.suse/nfsd-destroy-percpu-stats-counters-after-reply-cache.patch
 	patches.suse/NFSD-Fix-possible-sleep-during-nfsd4_release_lockown.patch
 	patches.suse/RDMA-siw-Enable-siw-on-tunnel-devices.patch
+	patches.suse/RDMA-qedr-Remove-unnecessary-synchronize_irq-before-.patch
 	patches.suse/0010-dm-integrity-fix-error-code-in-dm_integrity_ctr.patch
 	patches.suse/pipe-Fix-missing-lock-in-pipe_resize_ring.patch
 	patches.suse/list-fix-a-data-race-around-ep-rdllist.patch
