--- a/series.conf
+++ b/series.conf
@@ -5529,6 +5529,7 @@
 	patches.suse/ethernet-aquantia-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-bnx2x-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-bcmgenet-use-eth_hw_addr_set.patch
+	patches.suse/ethernet-enic-use-eth_hw_addr_set.patch
 	patches.suse/net-stream-don-t-purge-sk_error_queue-in-sk_stream_k.patch
 	patches.suse/net-smc-save-stack-space-and-allocate-smc_init_info
 	patches.suse/net-smc-prepare-for-SMC-Rv2-connection
