--- a/series.conf
+++ b/series.conf
@@ -12627,6 +12627,7 @@
 	patches.suse/sfc-Remove-global-definition-of-efx_reset_type_names.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
 	patches.suse/can-xilinx_can-mark-bit-timing-constants-as-const.patch
+	patches.suse/qed-Remove-IP-services-API.patch
 	patches.suse/eth-benet-remove-a-copy-of-the-NAPI_POLL_WEIGHT-defi.patch
 	patches.suse/net-ieee802154-ca8210-Fix-lifs-sifs-periods.patch
 	patches.suse/octeontx2-af-debugfs-fix-error-return-of-allocations.patch
