net: drivers: get ready for const netdev->dev_addr (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5711,6 +5711,7 @@
 	patches.suse/net-bonding-constify-and-use-dev_addr_set.patch
 	patches.suse/net-hsr-get-ready-for-const-netdev-dev_addr.patch
 	patches.suse/net-caif-get-ready-for-const-netdev-dev_addr.patch
+	patches.suse/net-drivers-get-ready-for-const-netdev-dev_addr.patch
 	patches.suse/can-bittiming-can_fixup_bittiming-change-type-of-tse.patch
 	patches.suse/net-dsa-avoid-refcount-warnings-when-port_-fdb-mdb-_.patch
 	patches.suse/net-hns3-add-debugfs-support-for-interrupt-coalesce.patch
