wil6210: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5657,6 +5657,7 @@
 	patches.suse/wireless-use-eth_hw_addr_set-instead-of-ether_addr_c.patch
 	patches.suse/wireless-use-eth_hw_addr_set-for-dev-addr_len-cases.patch
 	patches.suse/ath6kl-use-eth_hw_addr_set.patch
+	patches.suse/wil6210-use-eth_hw_addr_set.patch
 	patches.suse/mt76-mt7921-fix-endianness-in-mt7921_mcu_tx_done_eve.patch
 	patches.suse/mt76-mt7915-fix-endianness-warning-in-mt7915_mac_add.patch
 	patches.suse/mt76-mt7921-fix-endianness-warning-in-mt7921_update_.patch
