RDMA/qedr: Fix reporting QP timeout attribute (jsc#PED-1529).

--- a/series.conf
+++ b/series.conf
@@ -13509,6 +13509,7 @@
 	patches.suse/platform-x86-panasonic-laptop-don-t-report-duplicate.patch
 	patches.suse/platform-x86-panasonic-laptop-filter-out-duplicate-v.patch
 	patches.suse/platform-x86-hp-wmi-Ignore-Sanitization-Mode-event.patch
+	patches.suse/RDMA-qedr-Fix-reporting-QP-timeout-attribute.patch
 	patches.suse/linux-dim-Fix-divide-by-0-in-RDMA-DIM.patch
 	patches.suse/selftests-net-pass-ipv6_args-to-udpgso_bench-s-IPv6-.patch
 	patches.suse/tunnels-do-not-assume-mac-header-is-set-in-skb_tunne.patch
