--- a/series.conf
+++ b/series.conf
@@ -5424,6 +5424,7 @@
 	patches.suse/ethernet-forcedeth-remove-direct-netdev-dev_addr-wri.patch
 	patches.suse/ethernet-tg3-remove-direct-netdev-dev_addr-writes.patch
 	patches.suse/ethernet-tulip-remove-direct-netdev-dev_addr-writes.patch
+	patches.suse/ethernet-sun-remove-direct-netdev-dev_addr-writes.patch
 	patches.suse/ionic-add-filterlist-to-debugfs.patch
 	patches.suse/ionic-move-lif-mac-address-functions.patch
 	patches.suse/ionic-remove-mac-overflow-flags.patch
