sfc: Separate efx_nic memory from net_device memory (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -13967,6 +13967,7 @@
 	patches.suse/sfc-Remove-netdev-init-from-efx_init_struct.patch
 	patches.suse/sfc-Change-BUG_ON-to-WARN_ON-and-recovery-code.patch
 	patches.suse/sfc-Encapsulate-access-to-netdev_priv.patch
+	patches.suse/sfc-Separate-efx_nic-memory-from-net_device-memory.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
