--- a/series.conf
+++ b/series.conf
@@ -11052,6 +11052,7 @@
 	patches.suse/i40e-remove-dead-stores-on-XSK-hotpath.patch
 	patches.suse/octeontx2-pf-cn10k-add-support-for-new-ptp-timestamp.patch
 	patches.suse/octeontx2-af-cn10k-add-workaround-for-ptp-errata.patch
+	patches.suse/sfc-default-config-to-1-channel-core-in-local-NUMA-n.patch
 	patches.suse/tuntap-add-sanity-checks-about-msg_controllen-in-sen.patch
 	patches.suse/qed-display-VF-trust-config.patch
 	patches.suse/qed-validate-and-restrict-untrusted-VFs-vlan-promisc.patch
