move netdev_boot_setup into Space.c (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -777,6 +777,7 @@
 	patches.suse/natsemi-sonic-stop-calling-netdev_boot_setup_check.patch
 	patches.suse/ax88796-export-ax_NS8390_init-hook.patch
 	patches.suse/xsurf100-drop-include-of-lib8390.c.patch
+	patches.suse/move-netdev_boot_setup-into-Space.c.patch
 	patches.suse/wan-remove-stale-Kconfig-entries.patch
 	patches.suse/octeontx2-af-Fix-spelling-mistake-Makesure-Make-sure.patch
 	patches.suse/dpaa2-switch-do-not-enable-the-DPSW-at-probe-time.patch
