ethernet: tulip: avoid duplicate variable name on sparc (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5460,6 +5460,7 @@
 	patches.suse/net-neigh-Enable-state-migration-between-NUD_PERMANE.patch
 	patches.suse/tulip-fix-setting-device-address-from-rom.patch
 	patches.suse/net-hns3-debugfs-add-support-dumping-page-pool-info.patch
+	patches.suse/ethernet-tulip-avoid-duplicate-variable-name-on-spar.patch
 	patches.suse/devlink-Reduce-struct-devlink-exposure.patch
 	patches.suse/devlink-Move-netdev_to_devlink-helpers-to-devlink.c.patch
 	patches.suse/devlink-Annotate-devlink-API-calls.patch
