--- a/series.conf
+++ b/series.conf
@@ -14369,6 +14369,7 @@
 	patches.suse/scsi-sg-Allow-waiting-for-commands-to-complete-on-removed-device.patch
 	patches.suse/RDMA-remove-useless-condition-in-siw_create_cq.patch
 	patches.suse/RDMA-qedr-Fix-potential-memory-leak-in-__qedr_alloc_.patch
+	patches.suse/RDMA-siw-Fix-duplicated-reported-IW_CM_EVENT_CONNECT.patch
 	patches.suse/0001-crypto-add-crypto_has_shash.patch
 	patches.suse/0002-crypto-add-crypto_has_kpp.patch
 	patches.suse/0003-lib-base64-RFC4648-compliant-base64-encoding.patch
