qed: Use the bitmap API to allocate bitmaps (jsc#PED-1526).

--- a/series.conf
+++ b/series.conf
@@ -13979,6 +13979,7 @@
 	patches.suse/cxgb4-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
+	patches.suse/qed-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/ath11k-fix-netdev-open-race.patch
 	patches.suse/ath11k-Fix-incorrect-debug_mask-mappings.patch
