--- a/series.conf
+++ b/series.conf
@@ -13970,6 +13970,7 @@
 	patches.suse/sfc-Separate-efx_nic-memory-from-net_device-memory.patch
 	patches.suse/sfc-Move-EF100-efx_nic_type-structs-to-the-end-of-th.patch
 	patches.suse/sfc-Unsplit-literal-string.patch
+	patches.suse/sfc-replace-function-name-in-string-with-__func__.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
