eth: fwnode: change the return type of mac address helpers (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5372,6 +5372,7 @@
 	patches.suse/of-net-add-a-helper-for-loading-netdev-dev_addr.patch
 	patches.suse/ethernet-use-of_get_ethdev_address.patch
 	patches.suse/device-property-move-mac-addr-helpers-to-eth.c.patch
+	patches.suse/eth-fwnode-change-the-return-type-of-mac-address-hel.patch
 	patches.suse/rsi-fix-occasional-initialisation-failure-with-BT-co.patch
 	patches.suse/rsi-fix-key-enabled-check-causing-unwanted-encryptio.patch
 	patches.suse/rsi-fix-rate-mask-set-leading-to-P2P-failure.patch
