ethernet: netxen: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5577,6 +5577,7 @@
 	patches.suse/net-mlx5-E-Switch-Increase-supported-number-of-forwa.patch
 	patches.suse/ethernet-mv643xx-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-sky2-skge-use-eth_hw_addr_set.patch
+	patches.suse/ethernet-netxen-use-eth_hw_addr_set.patch
 	patches.suse/e1000e-Remove-redundant-statement.patch
 	patches.suse/net-sched-Allow-statistics-reads-from-softirq.patch
 	patches.suse/ethernet-Remove-redundant-statement.patch
