--- a/series.conf
+++ b/series.conf
@@ -5606,6 +5606,7 @@
 	patches.suse/ice-use-devm_kcalloc-instead-of-devm_kzalloc.patch
 	patches.suse/ice-fix-an-error-code-in-ice_ena_vfs.patch
 	patches.suse/soc-fsl-dpio-Unsigned-compared-against-0-in-qbman_sw.patch
+	patches.suse/batman-adv-prepare-for-const-netdev-dev_addr.patch
 	patches.suse/net-enetc-unmap-DMA-in-enetc_send_cmd.patch
 	patches.suse/phy-micrel-ksz8041nl-do-not-use-power-down-mode.patch
 	patches.suse/ice-Add-infrastructure-for-mqprio-support-via-ndo_se.patch
