--- a/series.conf
+++ b/series.conf
@@ -8499,6 +8499,7 @@
 	patches.suse/net-stmmac-dwmac-qcom-ethqos-add-platform-level-cloc.patch
 	patches.suse/ixgbevf-Rename-MSGTYPE-to-SUCCESS-and-FAILURE.patch
 	patches.suse/tcp-add-missing-htmldocs-for-skb-ll_node-and-sk-defe.patch
+	patches.suse/mlxsw-constify-address-in-mlxsw_sp_port_dev_addr_set.patch
 	patches.suse/bnx2x-Use-struct_group-for-memcpy-region.patch
 	patches.suse/bnx2x-constify-static-inline-stub-for-dev_addr.patch
 	patches.suse/ethtool-add-support-to-set-get-rx-buf-len-via-ethtoo.patch
