--- a/series.conf
+++ b/series.conf
@@ -9303,6 +9303,7 @@
 	patches.suse/i2c-designware-pci-Fix-to-change-data-types-of-hcnt-.patch
 	patches.suse/i2c-bcm2835-Use-platform_get_irq-to-get-the-interrup.patch
 	patches.suse/kthread-add-the-helper-function-kthread_run_on_cpu.patch
+	patches.suse/RDMA-siw-make-use-of-the-helper-function-kthread_run.patch
 	patches.suse/mm-shmem-don-t-truncate-page-if-memory-failure-happens-v2.patch
 	patches.suse/0001-mm-drop-node-from-alloc_pages_vma.patch
 	patches.suse/0001-mm_zone-add-function-to-check-if-managed-dma-zone-ex.patch
