scsi: cxlflash: Search VPD with pci_vpd_find_ro_info_keyword() (jsc#PED-1506).

--- a/series.conf
+++ b/series.conf
@@ -3053,6 +3053,7 @@
 	patches.suse/cxgb4-Validate-VPD-checksum-with-pci_vpd_check_csum-52f0a1e0.patch
 	patches.suse/cxgb4-Remove-unused-vpd_param-member-ec-f9f3caa8.patch
 	patches.suse/cxgb4-Search-VPD-with-pci_vpd_find_ro_info_keyword-fc927929.patch
+	patches.suse/scsi-cxlflash-Search-VPD-with-pci_vpd_find_ro_info_k.patch
 	patches.suse/PCI-Fix-pci_dev_str_match_path-alloc-while-atomic-bu.patch
 	patches.suse/PCI-PTM-Remove-error-message-at-boot.patch
 	patches.suse/PCI-Correct-the-pci_iomap.h-header-guard-endif-comme.patch
