--- a/series.conf
+++ b/series.conf
@@ -12660,6 +12660,7 @@
 	patches.suse/sfc-siena-Rename-functions-in-efx-headers-to-avoid-c.patch
 	patches.suse/sfc-siena-Rename-RX-TX-functions-to-avoid-conflicts-.patch
 	patches.suse/sfc-siena-Rename-peripheral-functions-to-avoid-confl.patch
+	patches.suse/sfc-siena-Rename-functions-in-mcdi-headers-to-avoid-.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
