--- a/series.conf
+++ b/series.conf
@@ -5608,6 +5608,7 @@
 	patches.suse/soc-fsl-dpio-Unsigned-compared-against-0-in-qbman_sw.patch
 	patches.suse/batman-adv-prepare-for-const-netdev-dev_addr.patch
 	patches.suse/mac802154-use-dev_addr_set.patch
+	patches.suse/mac802154-use-dev_addr_set-manual.patch
 	patches.suse/net-enetc-unmap-DMA-in-enetc_send_cmd.patch
 	patches.suse/phy-micrel-ksz8041nl-do-not-use-power-down-mode.patch
 	patches.suse/ice-Add-infrastructure-for-mqprio-support-via-ndo_se.patch
