--- a/series.conf
+++ b/series.conf
@@ -8500,6 +8500,7 @@
 	patches.suse/ixgbevf-Rename-MSGTYPE-to-SUCCESS-and-FAILURE.patch
 	patches.suse/tcp-add-missing-htmldocs-for-skb-ll_node-and-sk-defe.patch
 	patches.suse/mlxsw-constify-address-in-mlxsw_sp_port_dev_addr_set.patch
+	patches.suse/ipw2200-constify-address-in-ipw_send_adapter_address.patch
 	patches.suse/bnx2x-Use-struct_group-for-memcpy-region.patch
 	patches.suse/bnx2x-constify-static-inline-stub-for-dev_addr.patch
 	patches.suse/ethtool-add-support-to-set-get-rx-buf-len-via-ethtoo.patch
