eth: platform: add a helper for loading netdev->dev_addr (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5414,6 +5414,7 @@
 	patches.suse/ice-rebuild-switchdev-when-resetting-all-VFs.patch
 	patches.suse/ice-switchdev-slow-path.patch
 	patches.suse/ice-add-port-representor-ethtool-ops-and-stats.patch
+	patches.suse/eth-platform-add-a-helper-for-loading-netdev-dev_add.patch
 	patches.suse/qed-Initialize-debug-string-array.patch
 	patches.suse/net-sched-sch_ets-properly-init-all-active-DRR-list-.patch
 	patches.suse/net-sysfs-try-not-to-restart-the-syscall-if-it-will-.patch
