ethernet: amd: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5525,6 +5525,7 @@
 	patches.suse/net-mlx5-Use-system_image_guid-to-determine-bonding.patch
 	patches.suse/ethernet-adaptec-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-alteon-use-eth_hw_addr_set.patch
+	patches.suse/ethernet-amd-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-bnx2x-use-eth_hw_addr_set.patch
 	patches.suse/net-stream-don-t-purge-sk_error_queue-in-sk_stream_k.patch
 	patches.suse/net-smc-save-stack-space-and-allocate-smc_init_info
