--- a/series.conf
+++ b/series.conf
@@ -5771,6 +5771,7 @@
 	patches.suse/staging-use-of_get_ethdev_address.patch
 	patches.suse/net-thunderbolt-use-eth_hw_addr_set.patch
 	patches.suse/media-use-eth_hw_addr_set.patch
+	patches.suse/mpt-fusion-use-dev_addr_set.patch
 	patches.suse/net-mlx5-Add-uid-field-to-UAR-allocation-structures.patch
 	patches.suse/IB-mlx5-Enable-UAR-to-have-DevX-UID.patch
 	patches.suse/net-mlx5-Add-ifc-bits-to-support-optional-counters.patch
