sfc/siena: Remove duplicate check on segments (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -12696,6 +12696,7 @@
 	patches.suse/iwlwifi-fw-init-SAR-GEO-table-only-if-data-is-presen.patch
 	patches.suse/iwlwifi-mvm-fix-assert-1F04-upon-reconfig.patch
 	patches.suse/can-mcp251xfd-silence-clang-s-Wunaligned-access-warn.patch
+	patches.suse/sfc-siena-Remove-duplicate-check-on-segments.patch
 	patches.suse/eth-bnxt-make-ulp_id-unsigned-to-make-GCC-12-happy.patch
 	patches.suse/wifi-rtlwifi-remove-always-true-condition-pointed-ou.patch
 	patches.suse/Bluetooth-fix-dangling-sco_conn-and-use-after-free-i.patch
