sfc: Avoid NULL pointer dereference on systems without numa awareness (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -11715,6 +11715,7 @@
 	patches.suse/ax25-Fix-UAF-bugs-in-ax25-timers.patch
 	patches.suse/xsk-Do-not-write-NULL-in-SW-ring-at-allocation-failu.patch
 	patches.suse/ice-xsk-Fix-indexing-in-ice_tx_xsk_pool.patch
+	patches.suse/sfc-Avoid-NULL-pointer-dereference-on-systems-withou.patch
 	patches.suse/wireguard-queueing-use-CFI-safe-ptr_ring-cleanup-fun.patch
 	patches.suse/wireguard-socket-free-skb-in-send6-when-ipv6-is-disa.patch
 	patches.suse/wireguard-socket-ignore-v6-endpoints-when-ipv6-is-di.patch
