--- a/series.conf
+++ b/series.conf
@@ -12656,6 +12656,7 @@
 	patches.suse/sfc-Move-Siena-specific-files.patch
 	patches.suse/sfc-Copy-shared-files-needed-for-Siena-part-1.patch
 	patches.suse/sfc-Copy-shared-files-needed-for-Siena-part-2.patch
+	patches.suse/sfc-siena-Remove-build-references-to-missing-functio.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
