net: sgi-xp: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5814,6 +5814,7 @@
 	patches.suse/ice-Add-support-to-print-error-on-PHY-FW-load-failur.patch
 	patches.suse/ice-Fix-clang-Wimplicit-fallthrough-in-ice_pull_qvec.patch
 	patches.suse/ice-fix-error-return-code-in-ice_get_recp_frm_fw.patch
+	patches.suse/net-sgi-xp-use-eth_hw_addr_set.patch
 	patches.suse/devlink-make-all-symbols-GPL-only.patch
 	patches.suse/ifb-fix-building-without-CONFIG_NET_CLS_ACT.patch
 	patches.suse/iwlwifi-Add-support-for-getting-rf-id-with-blank-otp.patch
