--- a/series.conf
+++ b/series.conf
@@ -3055,6 +3055,7 @@
 	patches.suse/cxgb4-Search-VPD-with-pci_vpd_find_ro_info_keyword-fc927929.patch
 	patches.suse/scsi-cxlflash-Search-VPD-with-pci_vpd_find_ro_info_k.patch
 	patches.suse/PCI-VPD-Stop-exporting-pci_vpd_find_tag.patch
+	patches.suse/PCI-VPD-Stop-exporting-pci_vpd_find_info_keyword.patch
 	patches.suse/PCI-Fix-pci_dev_str_match_path-alloc-while-atomic-bu.patch
 	patches.suse/PCI-PTM-Remove-error-message-at-boot.patch
 	patches.suse/PCI-Correct-the-pci_iomap.h-header-guard-endif-comme.patch
