qed: use msleep() in qed_mcp_cmd() and add qed_mcp_cmd_nosleep() for udelay (jsc#PED-1526).

--- a/series.conf
+++ b/series.conf
@@ -10999,6 +10999,7 @@
 	patches.suse/msft-hv-2516-net-mana-Add-counter-for-packet-dropped-by-XDP.patch
 	patches.suse/msft-hv-2517-net-mana-Add-counter-for-XDP_TX.patch
 	patches.suse/msft-hv-2518-net-mana-Reuse-XDP-dropped-page.patch
+	patches.suse/qed-use-msleep-in-qed_mcp_cmd-and-add-qed_mcp_cmd_no.patch
 	patches.suse/i40e-don-t-reserve-excessive-XDP_PACKET_HEADROOM-on-.patch
 	patches.suse/i40e-respect-metadata-on-XSK-Rx-to-skb.patch
 	patches.suse/ice-don-t-reserve-excessive-XDP_PACKET_HEADROOM-on-X.patch
