--- a/series.conf
+++ b/series.conf
@@ -722,6 +722,7 @@
 	patches.suse/sk_buff-track-dst-status-in-slow_gro.patch
 	patches.suse/sk_buff-track-extension-status-in-slow_gro.patch
 	patches.suse/net-optimize-GRO-for-the-common-case.patch
+	patches.suse/skbuff-allow-slow_gro-for-skb-carring-sock-reference.patch
 	patches.suse/qed-Remove-the-qed-module-version.patch
 	patches.suse/qede-Remove-the-qede-module-version.patch
 	patches.suse/devlink-Break-parameter-notification-sequence-to-be-.patch
