intel/e1000e:fix repeated words in comments (jsc#PED-837).

--- a/series.conf
+++ b/series.conf
@@ -13972,6 +13972,7 @@
 	patches.suse/sfc-Unsplit-literal-string.patch
 	patches.suse/sfc-replace-function-name-in-string-with-__func__.patch
 	patches.suse/intel-remove-unused-macros.patch
+	patches.suse/intel-e1000e-fix-repeated-words-in-comments.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
