--- a/series.conf
+++ b/series.conf
@@ -12664,6 +12664,7 @@
 	patches.suse/sfc-siena-Rename-functions-in-nic_common.h-to-avoid-.patch
 	patches.suse/sfc-siena-Inline-functions-in-sriov.h-to-avoid-confl.patch
 	patches.suse/sfc-Add-a-basic-Siena-module.patch
+	patches.suse/siena-Make-MTD-support-specific-for-Siena.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
