--- a/series.conf
+++ b/series.conf
@@ -13981,6 +13981,7 @@
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/qed-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/qed-Use-bitmap_empty.patch
+	patches.suse/qlogic-qed-fix-clang-Wformat-warnings.patch
 	patches.suse/ath10k-do-not-enforce-interrupt-trigger-type.patch
 	patches.suse/ath11k-fix-netdev-open-race.patch
 	patches.suse/ath11k-Fix-incorrect-debug_mask-mappings.patch
