eth: fwnode: remove the addr len from mac helpers (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5373,6 +5373,7 @@
 	patches.suse/ethernet-use-of_get_ethdev_address.patch
 	patches.suse/device-property-move-mac-addr-helpers-to-eth.c.patch
 	patches.suse/eth-fwnode-change-the-return-type-of-mac-address-hel.patch
+	patches.suse/eth-fwnode-remove-the-addr-len-from-mac-helpers.patch
 	patches.suse/rsi-fix-occasional-initialisation-failure-with-BT-co.patch
 	patches.suse/rsi-fix-key-enabled-check-causing-unwanted-encryptio.patch
 	patches.suse/rsi-fix-rate-mask-set-leading-to-P2P-failure.patch
