ipv6: constify dev_addr passing (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5470,6 +5470,7 @@
 	patches.suse/ionic-no-devlink_unregister-if-not-registered.patch
 	patches.suse/net-qed_debug-fix-check-of-false-grc_param-0-express.patch
 	patches.suse/llc-snap-constify-dev_addr-passing.patch
+	patches.suse/ipv6-constify-dev_addr-passing.patch
 	patches.suse/marvell-octeontx2-build-error-unknown-type-name-u64.patch
 	patches.suse/ice-Refactor-ice_aqc_link_topo_addr.patch
 	patches.suse/ice-Implement-functions-for-reading-and-setting-GPIO.patch
