--- a/series.conf
+++ b/series.conf
@@ -8754,6 +8754,7 @@
 	patches.suse/bpf-selftests-Test-PTR_TO_RDONLY_MEM.patch
 	patches.suse/net-Don-t-include-filter.h-from-net-sock.h.patch
 	patches.suse/net-smc-remove-redundant-re-assignment-of-pointer-link
+	patches.suse/qed-Use-dma_set_mask_and_coherent-and-simplify-code.patch
 	patches.suse/batman-adv-allow-netlink-usage-in-unprivileged-conta.patch
 	patches.suse/ethernet-sfc-remove-redundant-rc-variable.patch
 	patches.suse/mac80211-allow-non-standard-VHT-MCS-10-11.patch
