etherdevice: use __dev_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -3976,6 +3976,7 @@
 	patches.suse/powerpc-fsl-dts-Fix-phy-connection-type-for-fm1mac3.patch
 	patches.suse/ptp_pch-Load-module-automatically-if-ID-matches.patch
 	patches.suse/dsa-tag_dsa-Fix-mask-for-trunked-packets.patch
+	patches.suse/etherdevice-use-__dev_addr_set.patch
 	patches.suse/r8152-avoid-to-resubmit-rx-immediately.patch
 	patches.suse/net-bridge-use-nla_total_size_64bit-in-br_get_linkxs.patch
 	patches.suse/net-bridge-fix-under-estimation-in-br_get_linkxstats.patch
