bluetooth: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5729,6 +5729,7 @@
 	patches.suse/mt76-mt7615-mt7622-fix-ibss-and-meshpoint.patch
 	patches.suse/usbb-catc-use-correct-API-for-MAC-addresses.patch
 	patches.suse/fddi-defza-add-missing-pointer-type-cast.patch
+	patches.suse/bluetooth-use-eth_hw_addr_set.patch
 	patches.suse/net-qed_ptp-fix-check-of-true-rc-expression.patch
 	patches.suse/net-qed_dev-fix-check-of-true-rc-expression.patch
 	patches.suse/tcp-don-t-free-a-FIN-sk_buff-in-tcp_remove_empty_skb.patch
