net/mlx4_en: use kzalloc (jsc#PED-1548).

--- a/series.conf
+++ b/series.conf
@@ -11184,6 +11184,7 @@
 	patches.suse/ath10k-Fix-error-handling-in-ath10k_setup_msa_resour.patch
 	patches.suse/mac80211-fix-potential-double-free-on-mesh-join.patch
 	patches.suse/msft-hv-2552-net-netvsc-remove-break-after-return.patch
+	patches.suse/net-mlx4_en-use-kzalloc.patch
 	patches.suse/devlink-expose-instance-locking-and-add-locked-port-.patch
 	patches.suse/can-isotp-return-EADDRNOTAVAIL-when-reading-from-unb.patch
 	patches.suse/can-isotp-support-MSG_TRUNC-flag-when-reading-from-s.patch
