--- a/series.conf
+++ b/series.conf
@@ -5472,6 +5472,7 @@
 	patches.suse/llc-snap-constify-dev_addr-passing.patch
 	patches.suse/ipv6-constify-dev_addr-passing.patch
 	patches.suse/netdevice-demote-the-type-of-some-dev_addr_set-helpe.patch
+	patches.suse/hamradio-use-dev_addr_set-for-setting-device-address.patch
 	patches.suse/marvell-octeontx2-build-error-unknown-type-name-u64.patch
 	patches.suse/ice-Refactor-ice_aqc_link_topo_addr.patch
 	patches.suse/ice-Implement-functions-for-reading-and-setting-GPIO.patch
