--- a/series.conf
+++ b/series.conf
@@ -5769,6 +5769,7 @@
 	patches.suse/net-mlx5-Lag-Make-mlx5_lag_is_multipath-be-static-in.patch
 	patches.suse/net-sched-gred-dynamically-allocate-tc_gred_qopt_off.patch
 	patches.suse/staging-use-of_get_ethdev_address.patch
+	patches.suse/net-thunderbolt-use-eth_hw_addr_set.patch
 	patches.suse/net-mlx5-Add-uid-field-to-UAR-allocation-structures.patch
 	patches.suse/IB-mlx5-Enable-UAR-to-have-DevX-UID.patch
 	patches.suse/net-mlx5-Add-ifc-bits-to-support-optional-counters.patch
