--- a/series.conf
+++ b/series.conf
@@ -5486,6 +5486,7 @@
 	patches.suse/ethernet-manually-convert-memcpy-dev_addr-.-sizeof-a.patch
 	patches.suse/ethernet-replace-netdev-dev_addr-assignment-loops.patch
 	patches.suse/ethernet-replace-netdev-dev_addr-16bit-writes.patch
+	patches.suse/ethernet-remove-random_ether_addr.patch
 	patches.suse/net-phy-micrel-make-skew-ps-check-more-lenient.patch
 	patches.suse/msft-hv-2454-hv_netvsc-Add-comment-of-netvsc_xdp_xmit.patch
 	patches.suse/net-fealnx-fix-build-for-UML.patch
