--- a/series.conf
+++ b/series.conf
@@ -9150,6 +9150,7 @@
 	patches.suse/RDMA-rtrs-clt-Fix-the-initial-value-of-min_latency.patch
 	patches.suse/RDMA-siw-Use-helper-function-to-set-sys_image_guid.patch
 	patches.suse/RDMA-bnxt_re-Remove-dynamic-pkey-table.patch
+	patches.suse/RDMA-mlx4-Use-bitmap_alloc-when-applicable.patch
 	patches.suse/RDMA-bnxt_re-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/RDMA-hns-Modify-the-mapping-attribute-of-doorbell-to.patch
 	patches.suse/RDMA-uverbs-Remove-the-unnecessary-assignment.patch
