--- a/series.conf
+++ b/series.conf
@@ -12603,6 +12603,7 @@
 	patches.suse/selftests-resctrl-Fix-null-pointer-dereference-on-op.patch
 	patches.suse/kselftest-cgroup-fix-test_stress.sh-to-use-OUTPUT-di.patch
 	patches.suse/bnx2x-Fix-undefined-behavior-due-to-shift-overflowin.patch
+	patches.suse/sfc-Stop-using-iommu_present.patch
 	patches.suse/bnxt-refactor-bnxt_rx_xdp-to-separate-xdp_init_buff-.patch
 	patches.suse/bnxt-add-flag-to-denote-that-an-xdp-program-is-curre.patch
 	patches.suse/bnxt-refactor-bnxt_rx_pages-operate-on-skb_shared_in.patch
