net: virtio: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5786,6 +5786,7 @@
 	patches.suse/octeontx2-af-cn10k-debugfs-for-dumping-LMTST-map-tab.patch
 	patches.suse/octeontx2-af-debugfs-Add-channel-and-channel-mask.patch
 	patches.suse/devlink-Simplify-internal-devlink-params-implementat.patch
+	patches.suse/net-virtio-use-eth_hw_addr_set.patch
 	patches.suse/bnxt_en-refactor-printing-of-device-info.patch
 	patches.suse/bnxt_en-refactor-cancellation-of-resource-reservatio.patch
 	patches.suse/bnxt_en-implement-devlink-dev-reload-driver_reinit.patch
