qed: Enhance rammod debug prints to provide pretty details (jsc#PED-1526).

--- a/series.conf
+++ b/series.conf
@@ -8529,6 +8529,7 @@
 	patches.suse/igc-AF_XDP-zero-copy-metadata-adjust-breaks-SKBs-on-.patch
 	patches.suse/net-ice-Fix-boolean-assignment.patch
 	patches.suse/net-ice-Remove-unused-enum.patch
+	patches.suse/qed-Enhance-rammod-debug-prints-to-provide-pretty-de.patch
 	patches.suse/net-smc-Clear-memory-when-release-and-reuse-buffer
 	patches.suse/ath11k-set-correct-NL80211_FEATURE_DYNAMIC_SMPS-for-.patch
 	patches.suse/wcn36xx-ensure-pairing-of-init_scan-finish_scan-and-.patch
