--- a/series.conf
+++ b/series.conf
@@ -5727,6 +5727,7 @@
 	patches.suse/gve-Implement-packet-continuation-for-RX.patch
 	patches.suse/gve-Add-a-jumbo-frame-device-option.patch
 	patches.suse/mt76-mt7615-mt7622-fix-ibss-and-meshpoint.patch
+	patches.suse/usbb-catc-use-correct-API-for-MAC-addresses.patch
 	patches.suse/net-qed_ptp-fix-check-of-true-rc-expression.patch
 	patches.suse/net-qed_dev-fix-check-of-true-rc-expression.patch
 	patches.suse/tcp-don-t-free-a-FIN-sk_buff-in-tcp_remove_empty_skb.patch
