sfc/siena: Make MCDI logging support specific for Siena (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -12667,6 +12667,7 @@
 	patches.suse/siena-Make-MTD-support-specific-for-Siena.patch
 	patches.suse/siena-Make-SRIOV-support-specific-for-Siena.patch
 	patches.suse/siena-Make-HWMON-support-specific-for-Siena.patch
+	patches.suse/sfc-siena-Make-MCDI-logging-support-specific-for-Sie.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
