--- a/series.conf
+++ b/series.conf
@@ -5630,6 +5630,7 @@
 	patches.suse/cfg80211-always-free-wiphy-specific-regdomain.patch
 	patches.suse/wireless-mac80211_hwsim-use-eth_hw_addr_set.patch
 	patches.suse/mac80211-use-eth_hw_addr_set.patch
+	patches.suse/cfg80211-prepare-for-const-netdev-dev_addr.patch
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
 	patches.suse/rtw89-add-Realtek-802.11ax-driver.patch
