--- a/series.conf
+++ b/series.conf
@@ -9143,6 +9143,7 @@
 	patches.suse/RDMA-bnxt_re-Scan-the-whole-bitmap-when-checking-if-.patch
 	patches.suse/RDMA-hns-Validate-the-pkey-index.patch
 	patches.suse/RDMA-cxgb4-Use-helper-function-to-set-GUIDs.patch
+	patches.suse/RDMA-cxgb4-Use-bitmap_zalloc-when-applicable.patch
 	patches.suse/RDMA-cma-Remove-open-coding-of-overflow-checking-for.patch
 	patches.suse/RDMA-rtrs-clt-Fix-the-initial-value-of-min_latency.patch
 	patches.suse/RDMA-bnxt_re-Remove-dynamic-pkey-table.patch
