--- a/series.conf
+++ b/series.conf
@@ -12619,6 +12619,7 @@
 	patches.suse/sfc-use-hardware-tx-timestamps-for-more-than-PTP.patch
 	patches.suse/bnx2x-Fix-spelling-mistake-regiser-register.patch
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
+	patches.suse/sfc-ef10-Fix-assigning-negative-value-to-unsigned-va.patch
 	patches.suse/net-dsa-mt7530-1G-can-also-support-1000BASE-X-link-m.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
 	patches.suse/can-xilinx_can-mark-bit-timing-constants-as-const.patch
