sfc: Remove netdev init from efx_init_struct (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -13964,6 +13964,7 @@
 	patches.suse/sfc-falcon-fix-repeated-words-in-comments.patch
 	patches.suse/sfc-Split-STATE_READY-in-to-STATE_NET_DOWN-and-STATE.patch
 	patches.suse/sfc-Add-a-PROBED-state-for-EF100-VDPA-use.patch
+	patches.suse/sfc-Remove-netdev-init-from-efx_init_struct.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
