wireless: mac80211_hwsim: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5628,6 +5628,7 @@
 	patches.suse/net-plip-use-eth_hw_addr_set.patch
 	patches.suse/net-sb1000-rionet-use-eth_hw_addr_set.patch
 	patches.suse/cfg80211-always-free-wiphy-specific-regdomain.patch
+	patches.suse/wireless-mac80211_hwsim-use-eth_hw_addr_set.patch
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
 	patches.suse/rtw89-add-Realtek-802.11ax-driver.patch
