--- a/series.conf
+++ b/series.conf
@@ -5303,6 +5303,7 @@
 	patches.suse/msft-hv-2445-net-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-use-eth_hw_addr_set.patch
 	patches.suse/net-usb-use-eth_hw_addr_set.patch
+	patches.suse/net-use-eth_hw_addr_set-instead-of-ether_addr_copy.patch
 	patches.suse/ethernet-use-eth_hw_addr_set-instead-of-ether_addr_c.patch
 	patches.suse/ethernet-chelsio-use-eth_hw_addr_set.patch
 	patches.suse/net-mlx4_en-avoid-one-cache-line-miss-to-ring-doorbe.patch
