--- a/series.conf
+++ b/series.conf
@@ -5015,6 +5015,7 @@
 	patches.suse/fortify-Fix-dropped-strcpy-compile-time-write-overfl.patch
 	patches.suse/lib-Introduce-CONFIG_MEMCPY_KUNIT_TEST.patch
 	patches.suse/string.h-Introduce-memset_after-for-wiping-trailing-.patch
+	patches.suse/string.h-Introduce-memset_startat-for-wiping-trailin.patch
 	patches.suse/stddef-Introduce-DECLARE_FLEX_ARRAY-helper.patch
 	patches.suse/firmware-psci-fix-application-of-sizeof-to-pointer.patch
 	patches.suse/smackfs-Fix-use-after-free-in-netlbl_catmap_walk.patch
