sfc: Search VPD with pci_vpd_find_ro_info_keyword() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -3039,6 +3039,7 @@
 	patches.suse/PCI-VPD-Add-pci_vpd_find_ro_info_keyword.patch
 	patches.suse/PCI-VPD-Add-pci_vpd_check_csum.patch
 	patches.suse/sfc-Read-VPD-with-pci_vpd_alloc.patch
+	patches.suse/sfc-Search-VPD-with-pci_vpd_find_ro_info_keyword.patch
 	patches.suse/tg3-Read-VPD-with-pci_vpd_alloc.patch
 	patches.suse/tg3-Validate-VPD-checksum-with-pci_vpd_check_csum.patch
 	patches.suse/tg3-Search-VPD-with-pci_vpd_find_ro_info_keyword.patch
