--- a/series.conf
+++ b/series.conf
@@ -5584,6 +5584,7 @@
 	patches.suse/ethernet-smc91x-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-smsc-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-add-a-helper-for-assigning-port-addresses.patch
+	patches.suse/ethernet-prestera-use-eth_hw_addr_gen.patch
 	patches.suse/e1000e-Remove-redundant-statement.patch
 	patches.suse/net-sched-Allow-statistics-reads-from-softirq.patch
 	patches.suse/ethernet-Remove-redundant-statement.patch
