--- a/series.conf
+++ b/series.conf
@@ -12623,6 +12623,7 @@
 	patches.suse/sfc-Fix-spelling-mistake-writting-writing.patch
 	patches.suse/net-dsa-mt7530-1G-can-also-support-1000BASE-X-link-m.patch
 	patches.suse/sfc-efx_default_channel_type-APIs-can-be-static.patch
+	patches.suse/sfc-Remove-duplicate-definition-of-efx_xmit_done.patch
 	patches.suse/NFC-NULL-out-the-dev-rfkill-to-prevent-UAF.patch
 	patches.suse/can-xilinx_can-mark-bit-timing-constants-as-const.patch
 	patches.suse/eth-benet-remove-a-copy-of-the-NAPI_POLL_WEIGHT-defi.patch
