--- a/series.conf
+++ b/series.conf
@@ -9144,6 +9144,7 @@
 	patches.suse/RDMA-hns-Validate-the-pkey-index.patch
 	patches.suse/RDMA-cxgb4-Use-helper-function-to-set-GUIDs.patch
 	patches.suse/RDMA-cxgb4-Use-bitmap_zalloc-when-applicable.patch
+	patches.suse/RDMA-cxgb4-Use-bitmap_set-when-applicable.patch
 	patches.suse/RDMA-cma-Remove-open-coding-of-overflow-checking-for.patch
 	patches.suse/RDMA-rtrs-clt-Fix-the-initial-value-of-min_latency.patch
 	patches.suse/RDMA-bnxt_re-Remove-dynamic-pkey-table.patch
