--- a/series.conf
+++ b/series.conf
@@ -13950,6 +13950,7 @@
 	patches.suse/vmxnet3-update-to-version-7.patch
 	patches.suse/wifi-rtlwifi-fix-error-codes-in-rtl_debugfs_set_writ.patch
 	patches.suse/sfc-Fix-typo-in-comment.patch
+	patches.suse/sfc-siena-Fix-typo-in-comment.patch
 	patches.suse/vmxnet3-disable-overlay-offloads-if-UPT-device-does-.patch
 	patches.suse/bnxt-Fix-typo-in-comments.patch
 	patches.suse/usbnet-Fix-linkwatch-use-after-free-on-disconnect.patch
