--- a/series.conf
+++ b/series.conf
@@ -13110,6 +13110,7 @@
 	patches.suse/net-ethernet-mtk_eth_soc-out-of-bounds-read-in-mtk_h.patch
 	patches.suse/net-ethernet-ti-am65-cpsw-nuss-Fix-some-refcount-lea.patch
 	patches.suse/net-smc-fixes-for-converting-from-struct-smc_cdc_tx_pend-to-struct-smc_wr_tx_pend_priv
+	patches.suse/sfc-fix-considering-that-all-channels-have-TX-queues.patch
 	patches.suse/netfilter-nf_tables-sanitize-nft_set_desc_concat_par.patch
 	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
