--- a/series.conf
+++ b/series.conf
@@ -13111,6 +13111,7 @@
 	patches.suse/net-ethernet-ti-am65-cpsw-nuss-Fix-some-refcount-lea.patch
 	patches.suse/net-smc-fixes-for-converting-from-struct-smc_cdc_tx_pend-to-struct-smc_wr_tx_pend_priv
 	patches.suse/sfc-fix-considering-that-all-channels-have-TX-queues.patch
+	patches.suse/sfc-fix-wrong-tx-channel-offset-with-efx_separate_tx.patch
 	patches.suse/netfilter-nf_tables-sanitize-nft_set_desc_concat_par.patch
 	patches.suse/octeontx2-af-fix-error-code-in-is_valid_offset.patch
 	patches.suse/wifi-mac80211-fix-use-after-free-in-chanctx-code.patch
