--- a/series.conf
+++ b/series.conf
@@ -5552,6 +5552,7 @@
 	patches.suse/net-sched-Merge-Qdisc-bstats-and-Qdisc-cpu_bstats-da.patch
 	patches.suse/net-sched-Remove-Qdisc-running-sequence-counter.patch
 	patches.suse/octeontx2-nic-fix-mixed-module-build.patch
+	patches.suse/ethernet-use-eth_hw_addr_set-in-unmaintained-drivers.patch
 	patches.suse/ipvs-add-sysctl_run_estimation-to-support-disable-es.patch
 	patches.suse/netfilter-nft_dynset-relax-superfluous-check-on-set-.patch
 	patches.suse/sfc-Fix-reading-non-legacy-supported-link-modes.patch
