net: remove single-byte netdev->dev_addr writes (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5474,6 +5474,7 @@
 	patches.suse/netdevice-demote-the-type-of-some-dev_addr_set-helpe.patch
 	patches.suse/hamradio-use-dev_addr_set-for-setting-device-address.patch
 	patches.suse/ip-use-dev_addr_set-in-tunnels.patch
+	patches.suse/net-remove-single-byte-netdev-dev_addr-writes.patch
 	patches.suse/marvell-octeontx2-build-error-unknown-type-name-u64.patch
 	patches.suse/ice-Refactor-ice_aqc_link_topo_addr.patch
 	patches.suse/ice-Implement-functions-for-reading-and-setting-GPIO.patch
