--- a/series.conf
+++ b/series.conf
@@ -13954,6 +13954,7 @@
 	patches.suse/vmxnet3-disable-overlay-offloads-if-UPT-device-does-.patch
 	patches.suse/cxgb4vf-remove-unexpected-word-the.patch
 	patches.suse/bnxt-Fix-typo-in-comments.patch
+	patches.suse/cxgb4-cxgb4vf-Fix-typo-in-comments.patch
 	patches.suse/usbnet-Fix-linkwatch-use-after-free-on-disconnect.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-bit-rates-wit.patch
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
