--- a/series.conf
+++ b/series.conf
@@ -8761,6 +8761,7 @@
 	patches.suse/net-ethernet-mtk_eth_soc-fix-return-values-and-refac.patch
 	patches.suse/can-usb_8dev-remove-unused-member-echo_skb-from-stru.patch
 	patches.suse/net-phy-marvell-configure-RGMII-delays-for-88E1118.patch
+	patches.suse/gro-add-ability-to-control-gro-max-packet-size.patch
 	patches.suse/sfc-Use-swap-instead-of-open-coding-it.patch
 	patches.suse/veth-Do-not-record-rx-queue-hint-in-veth_xmit.patch
 	patches.suse/net-tls-Fix-skb-memory-leak-when-running-kTLS-traffi.patch
