--- a/series.conf
+++ b/series.conf
@@ -11289,6 +11289,7 @@
 	patches.suse/drm-amd-display-Add-pstate-verification-and-recovery.patch
 	patches.suse/xfs-use-setattr_copy-to-set-vfs-inode-attributes.patch
 	patches.suse/RDMA-core-Set-MR-type-in-ib_reg_user_mr.patch
+	patches.suse/RDMA-mlx4-Delete-useless-module.h-include.patch
 	patches.suse/RDMA-rxe-Check-the-last-packet-by-RXE_END_MASK.patch
 	patches.suse/IB-cma-Allow-XRC-INI-QPs-to-set-their-local-ACK-time.patch
 	patches.suse/RDMA-mlx5-Fix-the-flow-of-a-miss-in-the-allocation-o.patch
