sfc/siena: Inline functions in sriov.h to avoid conflicts with sfc (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -12662,6 +12662,7 @@
 	patches.suse/sfc-siena-Rename-peripheral-functions-to-avoid-confl.patch
 	patches.suse/sfc-siena-Rename-functions-in-mcdi-headers-to-avoid-.patch
 	patches.suse/sfc-siena-Rename-functions-in-nic_common.h-to-avoid-.patch
+	patches.suse/sfc-siena-Inline-functions-in-sriov.h-to-avoid-confl.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
