--- a/series.conf
+++ b/series.conf
@@ -12629,6 +12629,7 @@
 	patches.suse/can-xilinx_can-mark-bit-timing-constants-as-const.patch
 	patches.suse/qed-Remove-IP-services-API.patch
 	patches.suse/eth-benet-remove-a-copy-of-the-NAPI_POLL_WEIGHT-defi.patch
+	patches.suse/sfc-add-EF100-VF-support-via-a-write-to-sriov_numvfs.patch
 	patches.suse/net-ieee802154-ca8210-Fix-lifs-sifs-periods.patch
 	patches.suse/octeontx2-af-debugfs-fix-error-return-of-allocations.patch
 	patches.suse/ath11k-acquire-ab-base_lock-in-unassign-when-finding.patch
