net: sb1000,rionet: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5626,6 +5626,7 @@
 	patches.suse/fddi-skfp-constify-and-use-dev_addr_set.patch
 	patches.suse/net-fjes-constify-and-use-eth_hw_addr_set.patch
 	patches.suse/net-plip-use-eth_hw_addr_set.patch
+	patches.suse/net-sb1000-rionet-use-eth_hw_addr_set.patch
 	patches.suse/cfg80211-always-free-wiphy-specific-regdomain.patch
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
