--- a/series.conf
+++ b/series.conf
@@ -13962,6 +13962,7 @@
 	patches.suse/can-netlink-allow-configuring-of-fixed-data-bit-rate.patch
 	patches.suse/sfc-fix-repeated-words-in-comments.patch
 	patches.suse/sfc-falcon-fix-repeated-words-in-comments.patch
+	patches.suse/sfc-Split-STATE_READY-in-to-STATE_NET_DOWN-and-STATE.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
