RDMA/mlx4: Avoid flush_scheduled_work() usage (jsc#PED-1547).

--- a/series.conf
+++ b/series.conf
@@ -12948,6 +12948,7 @@
 	patches.suse/NFSD-Fix-possible-sleep-during-nfsd4_release_lockown.patch
 	patches.suse/RDMA-siw-Enable-siw-on-tunnel-devices.patch
 	patches.suse/RDMA-qedr-Remove-unnecessary-synchronize_irq-before-.patch
+	patches.suse/RDMA-mlx4-Avoid-flush_scheduled_work-usage.patch
 	patches.suse/0010-dm-integrity-fix-error-code-in-dm_integrity_ctr.patch
 	patches.suse/pipe-Fix-missing-lock-in-pipe_resize_ring.patch
 	patches.suse/list-fix-a-data-race-around-ep-rdllist.patch
