--- a/series.conf
+++ b/series.conf
@@ -13254,6 +13254,7 @@
 	patches.suse/net-mellanox-fix-open-coded-for_each_set_bit.patch
 	patches.suse/qed-rework-qed_rdma_bmap_free.patch
 	patches.suse/octeontx2-pf-replace-bitmap_weight-with-bitmap_empty.patch
+	patches.suse/qed-replace-bitmap_weight-with-bitmap_empty-in-qed_r.patch
 	patches.suse/drm-amd-pm-use-bitmap_-from-to-_arr32-where-appropri.patch
 	patches.suse/cifs-fix-potential-double-free-during-failed-mount.patch
 	patches.suse/cifs-remove-repeated-debug-message-on-cifs_put_smb_ses-.patch
