ethernet: sun: add missing semicolon, fix build (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5439,6 +5439,7 @@
 	patches.suse/msft-hv-2451-hv_netvsc-use-netif_is_bond_master-instead-of-open-c.patch
 	patches.suse/ethernet-Remove-redundant-flush_workqueue-calls.patch
 	patches.suse/octeontx2-pf-Simplify-the-receive-buffer-size-calcul.patch
+	patches.suse/ethernet-sun-add-missing-semicolon-fix-build.patch
 	patches.suse/gve-Switch-to-use-napi_complete_done.patch
 	patches.suse/gve-Add-rx-buffer-pagecnt-bias.patch
 	patches.suse/gve-Do-lazy-cleanup-in-TX-path.patch
