sfc: extend the locking on mcdi->seqno (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -10341,6 +10341,7 @@
 	patches.suse/net-ipa-add-an-interconnect-dependency.patch
 	patches.suse/net-smc-fix-unexpected-SMC_CLC_DECL_ERR_REGRMB-error-generated-by-client
 	patches.suse/net-smc-fix-unexpected-SMC_CLC_DECL_ERR_REGRMB-error-cause-by-server
+	patches.suse/sfc-extend-the-locking-on-mcdi-seqno.patch
 	patches.suse/bnx2-Fix-an-error-message.patch
 	patches.suse/selftests-mlxsw-tc_police_scale-Make-test-more-robus.patch
 	patches.suse/selftests-mlxsw-resource_scale-Fix-return-value.patch
