--- a/series.conf
+++ b/series.conf
@@ -5308,6 +5308,7 @@
 	patches.suse/net-usb-use-eth_hw_addr_set-instead-of-ether_addr_co.patch
 	patches.suse/ethernet-chelsio-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-s2io-use-eth_hw_addr_set.patch
+	patches.suse/fddi-use-eth_hw_addr_set.patch
 	patches.suse/net-mlx4_en-avoid-one-cache-line-miss-to-ring-doorbe.patch
 	patches.suse/qed-Fix-kernel-doc-warnings.patch
 	patches.suse/qed-Remove-e4_-and-_e4-from-FW-HSI.patch
