net: qede: Remove unnecessary synchronize_irq() before free_irq() (jsc#PED-1526).

--- a/series.conf
+++ b/series.conf
@@ -12681,6 +12681,7 @@
 	patches.suse/octeontx2-pf-Remove-unnecessary-synchronize_irq-befo.patch
 	patches.suse/net-phy-micrel-Allow-probing-without-.driver_data.patch
 	patches.suse/qed-Remove-unnecessary-synchronize_irq-before-free_i.patch
+	patches.suse/net-qede-Remove-unnecessary-synchronize_irq-before-f.patch
 	patches.suse/octeontx2-pf-Add-support-for-adaptive-interrupt-coal.patch
 	patches.suse/cfg80211-declare-MODULE_FIRMWARE-for-regulatory.db.patch
 	patches.suse/mac80211-upgrade-passive-scan-to-active-scan-on-DFS-.patch
