--- a/series.conf
+++ b/series.conf
@@ -8508,6 +8508,7 @@
 	patches.suse/cxgb4-Use-struct_group-for-memcpy-region.patch
 	patches.suse/bnx2x-Use-struct_group-for-memcpy-region.patch
 	patches.suse/bnx2x-constify-static-inline-stub-for-dev_addr.patch
+	patches.suse/net-constify-netdev-dev_addr.patch
 	patches.suse/ethtool-add-support-to-set-get-rx-buf-len-via-ethtoo.patch
 	patches.suse/ethtool-extend-ringparam-setting-getting-API-with-rx.patch
 	patches.suse/msft-hv-2484-net-mana-Add-XDP-support.patch
