--- a/series.conf
+++ b/series.conf
@@ -782,6 +782,7 @@
 	patches.suse/octeontx2-af-Fix-spelling-mistake-Makesure-Make-sure.patch
 	patches.suse/dpaa2-switch-do-not-enable-the-DPSW-at-probe-time.patch
 	patches.suse/bus-fsl-mc-extend-fsl_mc_get_endpoint-to-pass-interf.patch
+	patches.suse/net-add-extack-arg-for-link-ops.patch
 	patches.suse/can-j1939-j1939_session_tx_dat-fix-typo.patch
 	patches.suse/ptp-ocp-Expose-various-resources-on-the-timecard.patch
 	patches.suse/virtio_net-Replace-deprecated-CPU-hotplug-functions.patch
