--- a/series.conf
+++ b/series.conf
@@ -6560,6 +6560,7 @@
 	patches.suse/staging-use-eth_hw_addr_set-for-dev-addr_len-cases.patch
 	patches.suse/staging-qlge-use-eth_hw_addr_set.patch
 	patches.suse/staging-rtl8712-prepare-for-const-netdev-dev_addr.patch
+	patches.suse/staging-unisys-use-eth_hw_addr_set.patch
 	patches.suse/staging-rtl8712-fix-use-after-free-in-rtl8712_dl_fw.patch
 	patches.suse/staging-rtl8192u-fix-control-message-timeouts.patch
 	patches.suse/staging-r8712u-fix-control-message-timeout.patch
