sfc: use hardware tx timestamps for more than PTP (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -12616,6 +12616,7 @@
 	patches.suse/bnxt-adding-bnxt_xdp_build_skb-to-build-skb-from-mul.patch
 	patches.suse/bnxt-support-transmit-and-free-of-aggregation-buffer.patch
 	patches.suse/bnxt-XDP-multibuffer-enablement.patch
+	patches.suse/sfc-use-hardware-tx-timestamps-for-more-than-PTP.patch
 	patches.suse/bnx2x-Fix-spelling-mistake-regiser-register.patch
 	patches.suse/msft-hv-2570-hv_netvsc-Add-support-for-XDP_REDIRECT.patch
 	patches.suse/net-dsa-mt7530-1G-can-also-support-1000BASE-X-link-m.patch
