net: don't allow user space to lift the device limits (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -12652,6 +12652,7 @@
 	patches.suse/sfc-Disable-Siena-support.patch
 	patches.suse/sfc-Copy-a-subset-of-mcdi_pcol.h-to-siena.patch
 	patches.suse/net-add-netif_inherit_tso_max.patch
+	patches.suse/net-don-t-allow-user-space-to-lift-the-device-limits.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
