sfc:falcon: fix repeated words in comments (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -13961,6 +13961,7 @@
 	patches.suse/can-Break-loopback-loop-on-loopback-documentation.patch
 	patches.suse/can-netlink-allow-configuring-of-fixed-data-bit-rate.patch
 	patches.suse/sfc-fix-repeated-words-in-comments.patch
+	patches.suse/sfc-falcon-fix-repeated-words-in-comments.patch
 	patches.suse/ethernet-emulex-fix-repeated-words-in-comments.patch
 	patches.suse/bnxt-Use-the-bitmap-API-to-allocate-bitmaps.patch
 	patches.suse/cnic-Use-the-bitmap-API-to-allocate-bitmaps.patch
