net: qmi_wwan: use dev_addr_mod() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5620,6 +5620,7 @@
 	patches.suse/mlx5-fix-build-after-merge.patch
 	patches.suse/net-xen-use-eth_hw_addr_set.patch
 	patches.suse/usb-smsc-use-eth_hw_addr_set.patch
+	patches.suse/net-qmi_wwan-use-dev_addr_mod.patch
 	patches.suse/cfg80211-always-free-wiphy-specific-regdomain.patch
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
