r8169: fix incorrect mac address assignment (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -7511,6 +7511,7 @@
 	patches.suse/mlxsw-spectrum-Protect-driver-from-buggy-firmware.patch
 	patches.suse/ice-fix-vsi-txq_map-sizing.patch
 	patches.suse/ice-avoid-bpf_prog-refcount-underflow.patch
+	patches.suse/r8169-fix-incorrect-mac-address-assignment.patch
 	patches.suse/net-chelsio-cxgb4vf-Fix-an-error-code-in-cxgb4vf_pci.patch
 	patches.suse/net-usb-Correct-PHY-handling-of-smsc95xx.patch
 	patches.suse/net-marvell-mvpp2-increase-MTU-limit-when-XDP-enable.patch
