fddi: skfp: constify and use dev_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5623,6 +5623,7 @@
 	patches.suse/net-qmi_wwan-use-dev_addr_mod.patch
 	patches.suse/net-usb-don-t-write-directly-to-netdev-dev_addr.patch
 	patches.suse/fddi-defxx-defza-use-dev_addr_set.patch
+	patches.suse/fddi-skfp-constify-and-use-dev_addr_set.patch
 	patches.suse/cfg80211-always-free-wiphy-specific-regdomain.patch
 	patches.suse/b43legacy-fix-a-lower-bounds-test.patch
 	patches.suse/b43-fix-a-lower-bounds-test.patch
