sfc/siena: Rename RX/TX functions to avoid conflicts with sfc (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -12658,6 +12658,7 @@
 	patches.suse/sfc-Copy-shared-files-needed-for-Siena-part-2.patch
 	patches.suse/sfc-siena-Remove-build-references-to-missing-functio.patch
 	patches.suse/sfc-siena-Rename-functions-in-efx-headers-to-avoid-c.patch
+	patches.suse/sfc-siena-Rename-RX-TX-functions-to-avoid-conflicts-.patch
 	patches.suse/usbnet-Run-unregister_netdev-before-unbind-again.patch
 	patches.suse/usbnet-smsc95xx-Don-t-clear-read-only-PHY-interrupt.patch
 	patches.suse/usbnet-smsc95xx-Avoid-link-settings-race-on-interrup.patch
