PCI/VPD: Add pci_vpd_find_id_string() (jsc#PED-1506).

--- a/series.conf
+++ b/series.conf
@@ -3057,6 +3057,7 @@
 	patches.suse/PCI-VPD-Stop-exporting-pci_vpd_find_tag.patch
 	patches.suse/PCI-VPD-Stop-exporting-pci_vpd_find_info_keyword.patch
 	patches.suse/PCI-VPD-Include-post-processing-in-pci_vpd_find_tag.patch
+	patches.suse/PCI-VPD-Add-pci_vpd_find_id_string.patch
 	patches.suse/PCI-Fix-pci_dev_str_match_path-alloc-while-atomic-bu.patch
 	patches.suse/PCI-PTM-Remove-error-message-at-boot.patch
 	patches.suse/PCI-Correct-the-pci_iomap.h-header-guard-endif-comme.patch
