lib: Introduce CONFIG_MEMCPY_KUNIT_TEST (jsc#PED-1508).

--- a/series.conf
+++ b/series.conf
@@ -5013,6 +5013,7 @@
 	patches.suse/bnxt_en-Use-struct_group_attr-for-memcpy-region.patch
 	patches.suse/fortify-Explicitly-disable-Clang-support.patch
 	patches.suse/fortify-Fix-dropped-strcpy-compile-time-write-overfl.patch
+	patches.suse/lib-Introduce-CONFIG_MEMCPY_KUNIT_TEST.patch
 	patches.suse/stddef-Introduce-DECLARE_FLEX_ARRAY-helper.patch
 	patches.suse/firmware-psci-fix-application-of-sizeof-to-pointer.patch
 	patches.suse/smackfs-Fix-use-after-free-in-netlbl_catmap_walk.patch
