wireless: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5653,6 +5653,7 @@
 	patches.suse/iwlwifi-pnvm-don-t-kmemdup-more-than-we-have.patch
 	patches.suse/iwlwifi-pnvm-read-EFI-data-only-if-long-enough.patch
 	patches.suse/iwlwifi-cfg-set-low-latency-xtal-for-some-integrated.patch
+	patches.suse/wireless-use-eth_hw_addr_set.patch
 	patches.suse/mt76-mt7921-fix-endianness-in-mt7921_mcu_tx_done_eve.patch
 	patches.suse/mt76-mt7915-fix-endianness-warning-in-mt7915_mac_add.patch
 	patches.suse/mt76-mt7921-fix-endianness-warning-in-mt7921_update_.patch
