staging: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -6555,6 +6555,7 @@
 	patches.suse/staging-most-dim2-use-device-release-method.patch
 	patches.suse/staging-ks7010-select-CRYPTO_HASH-CRYPTO_MICHAEL_MIC.patch
 	patches.suse/staging-wlan-ng-Avoid-bitwise-vs-logical-OR-warning-.patch
+	patches.suse/staging-use-eth_hw_addr_set.patch
 	patches.suse/staging-rtl8712-fix-use-after-free-in-rtl8712_dl_fw.patch
 	patches.suse/staging-rtl8192u-fix-control-message-timeouts.patch
 	patches.suse/staging-r8712u-fix-control-message-timeout.patch
