net: gro: move skb_gro_receive into net/core/gro.c (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -8485,6 +8485,7 @@
 	patches.suse/tcp-do-not-call-tcp_cleanup_rbuf-if-we-have-a-backlo.patch
 	patches.suse/net-move-gro-definitions-to-include-net-gro.h.patch
 	patches.suse/net-gro-move-skb_gro_receive_list-to-udp_offload.c.patch
+	patches.suse/net-gro-move-skb_gro_receive-into-net-core-gro.c.patch
 	patches.suse/Bluetooth-L2CAP-Fix-not-initializing-sk_peer_pid.patch
 	patches.suse/Bluetooth-btusb-Fix-application-of-sizeof-to-pointer.patch
 	patches.suse/Bluetooth-Fix-debugfs-entry-leak-in-hci_register_dev.patch
