ethernet: via-velocity: use eth_hw_addr_set() (jsc#PED-1565).

--- a/series.conf
+++ b/series.conf
@@ -5598,6 +5598,7 @@
 	patches.suse/ethernet-tehuti-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-tlan-use-eth_hw_addr_set.patch
 	patches.suse/ethernet-via-rhine-use-eth_hw_addr_set.patch
+	patches.suse/ethernet-via-velocity-use-eth_hw_addr_set.patch
 	patches.suse/ice-Add-support-for-VF-rate-limiting.patch
 	patches.suse/ice-update-dim-usage-and-moderation.patch
 	patches.suse/ice-fix-rate-limit-update-after-coalesce-change.patch
