ARM: dts: imx: align SPI NOR node name with dtschema (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12539,6 +12539,7 @@
 	patches.suse/arm64-dts-qcom-sdm845-xiaomi-beryllium-fix-typo-in-p.patch
 	patches.suse/arm64-dts-qcom-qrb5165-rb5-Fix-can-clock-node-name.patch
 	patches.suse/ARM-dts-ci4x10-Adapt-to-changes-in-imx6qdl.dtsi-rega.patch
+	patches.suse/ARM-dts-imx-align-SPI-NOR-node-name-with-dtschema.patch
 	patches.suse/ARM-dts-imx6dl-colibri-Fix-I2C-pinmuxing.patch
 	patches.suse/arm64-dts-imx8mm-beacon-Enable-RTS-CTS-on-UART3.patch
 	patches.suse/arm64-dts-imx8mn-beacon-Enable-RTS-CTS-on-UART3.patch
