gpio: mockup: remove gpio debugfs when remove device (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14327,6 +14327,7 @@
 	patches.suse/xen-blkfront-Advertise-feature-persistent-as-user-re.patch
 	patches.suse/xen-blkfront-Cache-feature_persistent-value-before-a.patch
 	patches.suse/xen-grants-prevent-integer-overflow-in-gnttab_dma_al.patch
+	patches.suse/gpio-mockup-remove-gpio-debugfs-when-remove-device.patch
 	patches.suse/gpio-pca953x-Add-mutex_lock-for-regcache-sync-in-PM.patch
 	patches.suse/KVM-VMX-Heed-the-msr-argument-in-msr_write_intercept.patch
 	patches.suse/ARM-dts-imx6qdl-kontron-samx6i-remove-duplicated-nod.patch
