Input: goodix - add support for GT1158 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14317,6 +14317,7 @@
 	patches.suse/tty-n_gsm-initialize-more-members-at-gsm_alloc_mux.patch
 	patches.suse/tty-n_gsm-replace-kicktimer-with-delayed_work.patch
 	patches.suse/tty-n_gsm-avoid-call-of-sleeping-functions-from-atom.patch
+	patches.suse/Input-goodix-add-support-for-GT1158.patch
 	patches.suse/Input-rk805-pwrkey-fix-module-autoloading.patch
 	patches.suse/Input-iforce-wake-up-after-clearing-IFORCE_XMIT_RUNN.patch
 	patches.suse/s390-hugetlb-fix-prepare_hugepage_range-check-for-2-GB-hugepages
