usb: storage: Add ASUS <0x0b05:0x1932> to IGNORE_UAS (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14280,6 +14280,7 @@
 	patches.suse/USB-serial-cp210x-add-Decagon-UCA-device-id.patch
 	patches.suse/USB-serial-ch341-fix-lost-character-on-LCR-updates.patch
 	patches.suse/USB-serial-ch341-fix-disabled-rx-timer-on-older-devi.patch
+	patches.suse/usb-storage-Add-ASUS-0x0b05-0x1932-to-IGNORE_UAS.patch
 	patches.suse/Revert-usb-gadget-udc-xilinx-replace-memcpy-with-mem.patch
 	patches.suse/iio-adc-mcp3911-make-use-of-the-sign-bit.patch
 	patches.suse/iio-adc-mcp3911-use-correct-formula-for-AD-conversio.patch
